tests/sksl/errors/golden/ArrayTooManyDimensions.glsl

in int ar[1][1][1][1][1][1][1][1][1];
